--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
   "homepage": "https://github.com/IONISx/edx-modulestore-api",
   "dependencies": {
     "express": "^4.10.2",
-    "edx-modulestore": "^0.1.3",
+    "edx-modulestore": "^0.1.4",
     "nconf": "^0.6.9",
     "errorhandler": "^1.2.2",
     "body-parser": "^1.9.2",
     "method-override": "^2.3.0",
     "cors": "^2.5.2",
     "morgan": "^1.5.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "express-validator": "^2.7.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
